133067 - Bug: Aligning v2-cards heading arrow to right

--- a/blocks/v2-cards/v2-cards.css
+++ b/blocks/v2-cards/v2-cards.css
@@ -289,6 +289,7 @@
 .v2-cards.v2-cards--heading-with-arrow .v2-cards__heading a::after {
   height: 28px;
   width: 28px;
+  margin-left: auto;
   content: url('../../icons/arrow-right.svg');
 }
 
